fixed alignment of date in viewStockReport

--- a/public/style.css
+++ b/public/style.css
@@ -327,11 +327,12 @@ td i {
 }
 
 .stock-header div {
-    margin-left:57rem;
+    margin-left:auto;
 }
 
 .stock-header i {
     margin-top:0.5rem;
+    margin-left: 0.5rem;
 }
 
 .stock-analytics-holder {
